[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.0.3",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ethan Wu", email = "ethanwu@cs.ucsb.edu"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "CC-BY-SA-4.0"}
