[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.0.3",
    "mkdocs-minify-plugin>=0.6.2",
    "mkdocs-literate-nav>=0.6.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ethan Wu", email = "ethanwu@cs.ucsb.edu"},
]
dependencies = [
    "mkdocs-ezlinks-plugin>=0.1.14",
]
requires-python = ">=3.10"
license = {text = "CC-BY-SA-4.0"}
